Fixed text wrapping on transition end

--- a/styles/home.css
+++ b/styles/home.css
@@ -1,4 +1,5 @@
 .anim-left {
+    position: absolute;
     margin-left: -50%;
     opacity: 0;
     transition: 1s;
@@ -11,6 +12,7 @@
 }
 
 .anim-right {
+    position: absolute;
     margin-right: 50%;
     opacity: 0;
     transition: 1s;
